2017-08-10 0.8.6 indev
Windows of several main functionalities are no longer
QDialogs. Fixed unexpected behavior.
Now visualization window can be closed by sending it
a close signal.
Trying a solution to address the problem that prevents
plugins from being loaded correctly in Windows if the
path contains Chinese characters. Not even tried to
build in Windows though.

2017-06-22 0.8.6 indev
Minor bug fixes.
SMF reader finally takes chunk length into account.
Do not prepend sysex header to F0h sysex. Let the
readers do it.
File readers code cleanups and refined error messages.

2017-06-21 0.8.6 indev
Fixed FTBFS on Windows.
Fixed the default output device option.
Seeking now restores CC values correctly.

2017-06-21 0.8.6 indev
Fixed a bunch of bugs and crashes in the RtMidi
output device.

2017-06-21 0.8.6 indev
Code refactoring:
  Complete rewrite of the MIDI mapper. The new
  architecture allows implementation of custom MIDI
  output devices.
Enforces single fluidsynth instance. Deprecating
the option.
Documentation uptate.
The lite version no longer have hardcoded soundfont
path.
More testing needed for this revision.

2017-06-16 0.8.6 indev
Code refactoring:
  Tracks information are now preserved.
  CMidiReaderCollection no longer handles file info
  operations.
  Note on with zero velocity are no longer treated
  separately.
Small fixes to several memory leaks.
More code refactoring is going on.

2017-06-02 0.8.5 indev
Accumulative changes from 2017-03:
  Don't crash if RtMidi initialization failed.
  Hopefully fixed crash when closing the
  visualization window on Windows.
  Documentation update.

2017-02-14 0.8.5 indev
Scan for plugins in the executable directory instead
of the working directory.

2017-02-13 0.8.5 indev
Also use the new mechanism to handle the main Window.
Explicit initialization of variable fixes #4 2).

2017-02-13 0.8.5 indev
Fix pitch bend range handling.
Allow registering a string option as file path.