@@ -71,6 +71,8 @@
 		<li>Save dialog status*: Save dialog positions and restore on start up.</li>
 		<li>Save parameters in effects window</li>
 		<li>Persistent fluidsynth instance: Deprecated. Removing before 0.9.</li>
+		<li>Show label beside icon in toolbar buttons: If disabled, the toolbar buttons will be
+		icon only.</li>
 		<li>Icon Theme: Leave it unchanged unless you can't see the icons on those buttons.</li>
 		<li>Customize toolbar: customize the functionalities shown in the main window.</li>
 		<li>Customize actions: customize the functionalities shown in the file action menu.</li>
